--- a/凌异官网.html
+++ b/凌异官网.html
@@ -1,36 +1,67 @@
-<!--算了，不会写~就这样吧-->
-<超文本标记语言> 
-    <头> 
-        <标题>《凌异》游戏官网</标题> 
-    </头> 
-	<!- iframe src= "路径"宽度= "宽度"身高= "高度"名称= "名称" frame border > </iframe-->
-    <自指的名字="发电机" 内容=" GravCMS " />
-    <自指的名字="描述" 内容="我们是湛江的独立游戏团队“凌异游戏”，坚持做有节操有创意的好游戏。" />
-    <环能量损耗率="典型的" 
-    href="http://www.lingyun.com/zh">
-    <身体> 
-        
-        <字体颜色 = 红色><氕>此官网为正版官网，请勿相信其他冒名顶替的官网！！！</氕></font color = red >
-        <氕><我>（如果官网图片未显示  均为<字体颜色 = 黑色>病菌</font color = black >正在紧急修复)</我></氕>
-        <img科学研究委员会=" https://cy-pic . kuai Zhan . com/G3/E7/3e/d0fc-DD C2-4b1e-bb69-da 06658 ff 2 cf 60？cy sign = 837 b 513370037434 fdeb 3c CD 54338 de 9&cyt=1723486580 " 中高音="《凌异》游戏宣传图" 宽度="1080" 高度="540"> 
-        <p><氕>& nbsp& nbsp& nbsp& nbsp& nbsp& nbsp本游戏剧情简单且没有基于真实历史和现实事件的改编内容。游戏玩法基于肢体操作，鼓励玩家通过训练达到目标。</氕></p>
-        <img科学研究委员会=“https://cy-pic . kuai Zhan . com/G3/fa/E8/b99d-5f4b-4bc 9-a623-dd86c 633929734？cy sign = 10 a0c 449 a 0236 b8d 333772d 33 E1 D4 da 9&cyt=1723486654 " 中高音="《凌异》游戏宣传图" 宽度="1080" 高度="540"> 
-    <p><氕>& nbsp& nbsp& nbsp& nbsp& nbsp& nbsp游戏中没有基于文字和语音的陌生人社交系统。本游戏中没有用户实名认证系统，也没有任何收费内容，任何要充值都是盗版游戏。</氕></p>
-        <英国铁路公司></英国铁路公司>
-        <英国铁路公司></英国铁路公司>
-        <氕>官方V号：敬请期待！</氕>
-        <氕>官方Q号：<字体颜色 = 蓝色>2114537914</font color = blue ></氕>
-        <氕>邮箱：<字体颜色 = 蓝色>2114537914</字体颜色= blue>@qq.com</氕>
-        <字体大小 = 300><字体颜色 = 红色>声明：本游戏为个人团队开放，已用于参赛！如发现盗用！后果自负！</font color = red ></font size = 300 >
-        <英国铁路公司></英国铁路公司>
-        <氘>& nbsp& nbsp& nbsp& nbsp& nbsp& nbsp& nbsp& nbsp& nbsp& nbsp& nbsp& nbsp& nbsp& nbsp& nbsp& nbsp& nbsp& nbsp& nbsp& nbsp& nbsp& nbsp& nbsp& nbsp& nbsp& nbsp& nbsp& nbsp& nbsp& nbsp& nbsp& nbsp& nbsp& nbsp2024湛江市灵异游戏科技个人有限公司</氘>
-        <p><氕>开发者：湛江市<我>凌异</我>游戏科技个人有限公司 隐私政策<字体颜色 = 蓝色>｜</font volor = blue >用户使用</氕></p>
-        <p><氕>& nbsp& nbsp& nbsp& nbsp& nbsp& nbsp& nbsp& nbsp& nbsp& nbsp& nbsp& nbsp& nbsp& nbsp& nbsp& nbsp& nbsp& nbsp& nbsp& nbsp& nbsp& nbsp& nbsp许可服务协议<字体颜色 = 蓝色>｜</font color = blue >儿童隐私保护指引</氕></p>
-        &复制；LYhzkf_10290803
-        <字体颜色 = 蓝色><p><氕>抵制不良游戏，拒绝盗版游戏。注意自我保护，谨防受骗上当。</氕></p> </font color = blue >
-        <字体颜色 = 蓝色><p><氕>适度游戏益脑，沉迷游戏伤身。合理安排时间，享受健康生活。</氕></p></font color = blue >
-        <英国铁路公司></英国铁路公司>
-        <英国铁路公司></英国铁路公司>
-        <英国铁路公司></英国铁路公司>
-    </身体> 
-</超文本标记语言>
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+    <meta charset="UTF-8">
+    <title>《凌异》游戏隐私政策</title>
+</head>
+<body>
+    <h1>《凌异》游戏隐私政策</h1>
+
+    <p><strong>版本：</strong>1.0</p>
+    <p><strong>生效日期：</strong>2025年03月01日</p>
+
+    <h2>引言</h2>
+    <p>《凌异》游戏（以下简称“我们”、“我们的”或“本游戏”）致力于保护用户的隐私和个人信息。本隐私政策旨在告知您我们如何收集、使用、存储和保护您在使用本游戏过程中提供的个人信息。</p>
+
+    <h2>一、信息收集</h2>
+    <p>当您使用本游戏时，我们可能会收集以下信息：</p>
+    <ul>
+        <li>账户信息：包括用户名、密码、电子邮件地址等。</li>
+        <li>设备信息：包括设备型号、操作系统、设备唯一标识符等。</li>
+        <li>游戏内信息：包括游戏进度、成就、虚拟货币和物品等。</li>
+        <li>位置信息：如果您允许，我们可能会收集您的地理位置信息。</li>
+        <li>支付信息：如果您进行游戏内购买，我们需要收集您的支付信息，如信用卡号、银行账户信息等。</li>
+    </ul>
+
+    <h2>二、信息使用</h2>
+    <p>我们使用收集到的信息来：</p>
+    <ul>
+        <li>提供和维护本游戏服务。</li>
+        <li>改进游戏体验，包括个性化推荐和服务优化。</li>
+        <li>进行游戏更新和市场推广。</li>
+        <li>处理您的请求和问题，提供客户支持。</li>
+        <li>遵守法律法规和监管要求。</li>
+    </ul>
+
+    <h2>三、信息共享</h2>
+    <p>我们不会将您的个人信息出售给第三方。但在以下情况下，我们可能会与第三方共享您的信息：</p>
+    <ul>
+        <li>当法律要求或允许我们这样做时。</li>
+        <li>与合作伙伴共享，以便他们可以为我们提供服务。</li>
+        <li>在合并、收购或其他业务转让的情况下。</li>
+    </ul>
+
+    <h2>四、信息保护</h2>
+    <p>我们采取适当的技术和管理措施来保护您的个人信息免受未经授权的访问、泄露或滥用。</p>
+
+    <h2>五、您的权利</h2>
+    <p>您有权：</p>
+    <ul>
+        <li>访问和查看您的个人信息。</li>
+        <li>请求更正不准确的个人信息。</li>
+        <li>请求删除您的个人信息。</li>
+        <li>限制或反对我们处理您的个人信息。</li>
+        <li>撤销您之前给予的同意。</li>
+    </ul>
+
+    <h2>六、隐私政策变更</h2>
+    <p>我们可能会不时更新本隐私政策。如果您对本隐私政策有任何疑问，或者我们的隐私政策发生变更，我们将通过本游戏通知您。</p>
+
+    <h2>七、联系我们</h2>
+    <p>如果您有关于本隐私政策的任何问题或疑虑，或者您希望行使您的权利，您可以联系我们：</p>
+    <ul>
+        <li>电子邮件：<a href="mailto:2114537914@qq.com">privacy@lingyi-game.com</a></li>
+        <li>地址：<span>广东省湛江市吴川市****-**号</span></li>
+    </ul>
+</body>
+</html>
